fix(ui): Fix horizontal scrollbars from full width sections

--- a/ams/static/sass/partials/_full_width_section_block.scss
+++ b/ams/static/sass/partials/_full_width_section_block.scss
@@ -1,11 +1,9 @@
 .full-width-section {
   // Break out of container to extend to page edges
   position: relative;
-  width: 100vw;
   left: 50%;
-  right: 50%;
-  margin-left: -50vw;
-  margin-right: -50vw;
+  width: 100vw;
+  transform: translateX(-50%);
   padding: 3rem 0;
 
   &__background {
